@@ -1,8 +1,7 @@
 == BEFORE NEXT RELEASE ==
 
 == REAL SOON ==
- * More cases for filename helpers
-   * relative filenames
+ * Filename helpers
    * samba shares
    * pipe characters? C:/C|
  * Fix vs2k5/c::b warnings
